--- a/coml.opam
+++ b/coml.opam
@@ -2,13 +2,13 @@
 opam-version: "2.0"
 synopsis: "A short synopsis"
 description: "A longer description"
-maintainer: ["Maintainer Name"]
-authors: ["Author Name"]
-license: "LICENSE"
-tags: ["topics" "to describe" "your" "project"]
-homepage: "https://github.com/username/reponame"
-doc: "https://url/to/documentation"
-bug-reports: "https://github.com/username/reponame/issues"
+maintainer: ["toyboot4e"]
+authors: ["toyboot4e"]
+license: "MIT"
+tags: ["competitive"]
+homepage: "https://github.com/toyboot4e/coml"
+doc: "https://github.com/toyboot4e/coml"
+bug-reports: "https://github.com/toyboot4e/coml/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.14"}
@@ -28,4 +28,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/username/reponame.git"
+dev-repo: "git+https://github.com/toyboot4e/coml.git"
