add packages and run format with `ocamlformat`

--- a/coml.opam
+++ b/coml.opam
@@ -12,6 +12,11 @@ bug-reports: "https://github.com/toyboot4e/coml/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.14"}
+  "num"
+  "containers"
+  "core"
+  "iter"
+  "batteries"
   "odoc" {with-doc}
 ]
 build: [
